Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105754

QDoc's \sa command doesn't respect QDoc's //! comments

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.6.0 FF
    • 6.5
    • Build tools: qdoc
    • None
    • 211c92283 (dev), d7eeb6b0f (dev), f3328e2c4 (dev)
    • DaVinci 80

      Doing this:

      \sa foo //! let's go to bar after this

      unexpectedly leads to this:

      (qdoc) warning: Missing comma in '\sa'
      (qdoc) warning: Unknown macro 'sa'

        For Gerrit Dashboard: QTBUG-105754
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            paulwicking Paul Wicking
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes